@@ -24,6 +24,7 @@
       "build" : {
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
+            "Test::MetaSyntactic" : "1",
             "Test::More" : "0.88",
             "strict" : "0",
             "warnings" : "0"
@@ -32,6 +33,7 @@
       "configure" : {
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
+            "Test::MetaSyntactic" : "1",
             "Test::More" : "0.88",
             "strict" : "0",
             "warnings" : "0"
@@ -39,6 +41,7 @@
       },
       "runtime" : {
          "requires" : {
+            "Acme::MetaSyntactic" : "1",
             "perl" : "5.006",
             "strict" : "0",
             "warnings" : "0"
@@ -51,8 +54,9 @@
          "url" : "git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git"
       }
    },
-   "version" : "2012051701",
+   "version" : "2012052101",
    "x_test_requires" : {
+      "Test::MetaSyntactic" : 1,
       "Test::More" : 0.88,
       "strict" : 0,
       "warnings" : 0
