@@ -26,17 +26,19 @@ my %args = (
     VERSION_FROM         =>  $LIB_FILE,
     ABSTRACT_FROM        =>  $LIB_FILE,
     PREREQ_PM            => {
-        'strict'             =>  0,
-        'warnings'           =>  0,
+        'strict'                   =>  0,
+        'warnings'                 =>  0,
+        'Acme::MetaSyntactic'      =>  1.00,
     },
     MIN_PERL_VERSION     =>   5.006,
     AUTHOR               =>  "$ME <$LOCAL_ADDR\@$DOMAIN>",
     LICENSE              =>  'mit',
     META_MERGE           => {
         test_requires    => {
-            'strict'             => 0,
-            'warnings'           => 0,
-            'Test::More'         => 0.88,
+            'strict'               =>  0,
+            'warnings'             =>  0,
+            'Test::More'           =>  0.88,
+            'Test::MetaSyntactic'  =>  1.00,
         },
         resources        => {
             repository   => $REPOSITORY,
